fixed scrolling issue on iphone and changed name in manifest

--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -12,13 +12,14 @@ html, body {
     height: calc(100%);
     background: #f8f9fa;
     box-sizing: content-box;
-
+    -webkit-overflow-scrolling: touch;
     margin-left: auto;
     margin-right: auto;
 }
 
 .custom-table {
     padding: 0px;
+    -webkit-overflow-scrolling: touch;
 }
 
 .table-header {
